--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "truffle-hdwallet-provider": "0.0.3",
     "vue": "^2.5.3",
     "vue-router": "^2.8.1",
     "vuex": "^2.5.0",
